--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,6 +6,14 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
+hetzner:
+  service: S3
+  endpoint: https://nbg1.your-objectstorage.com
+  access_key_id: <%= Rails.application.credentials.dig(:hetzner, :access_key) %>
+  secret_access_key: <%= Rails.application.credentials.dig(:hetzner, :secret_key) %>
+  bucket: afida-b2c
+  region: nbg1
+
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
 #   service: S3
