--- a/config/storage.yml
+++ b/config/storage.yml
@@ -12,7 +12,7 @@ hetzner:
   access_key_id: <%= Rails.application.credentials.dig(:hetzner, :access_key) %>
   secret_access_key: <%= Rails.application.credentials.dig(:hetzner, :secret_key) %>
   bucket: afida-b2c
-  region: nbg1
+  region: unused
 
 # Use bin/rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
