--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.13",
     "@rails/activestorage": "^8.0.200",
-    "daisyui": "^5.0.38"
+    "daisyui": "^5.0.38",
+    "swiper": "^11.2.8"
   }
 }
