Add organization and role to User model
- Add organization_id foreign key and role column
- Validates role presence when user has organization
- Validates only one owner per organization
- Enum for roles: owner, admin, member
- Individual consumers have no organization/role

Tests: All user tests passing (33 runs, 56 assertions)

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -7,3 +7,33 @@ one:
 two:
   email_address: two@example.com
   password_digest: <%= password_digest %>
+
+acme_owner:
+  email_address: owner@acme.com
+  password_digest: <%= password_digest %>
+  organization: acme
+  role: owner
+
+acme_admin:
+  email_address: admin@acme.com
+  password_digest: <%= password_digest %>
+  organization: acme
+  role: admin
+
+acme_member:
+  email_address: member@acme.com
+  password_digest: <%= password_digest %>
+  organization: acme
+  role: member
+
+bobs_owner:
+  email_address: bob@bobsbakery.com
+  password_digest: <%= password_digest %>
+  organization: bobs_bakery
+  role: owner
+
+consumer:
+  email_address: consumer@example.com
+  password_digest: <%= password_digest %>
+  organization:
+  role:
