Add configuration support to CartItem
- Add configuration jsonb column for product options
- Add calculated_price for configured products
- Add design attachment via Active Storage
- Update unit_price and line_total to handle both types
- Validates calculated_price when configuration present

Tests: All cart item tests passing (22 tests, 41 assertions)

--- a/test/fixtures/cart_items.yml
+++ b/test/fixtures/cart_items.yml
@@ -11,3 +11,13 @@ two:
   product_variant: two
   quantity: 3
   price: 30
+
+branded_configuration:
+  cart: three
+  product_variant: one
+  quantity: 1
+  price: 10
+  configuration:
+    size: "12oz"
+    quantity: 5000
+  calculated_price: 900.00
