Configure RuboCop to exclude Gemfile.lock and auto-generated files
- Add AllCops exclusions for Gemfile.lock, node_modules, vendor, and db/schema.rb
- Update pre-commit hook to filter out Gemfile.lock from staged files
- Fix issue where RuboCop was incorrectly trying to lint lockfiles

This prevents pre-commit hook failures when Gemfile.lock is staged.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,6 +1,14 @@
 # Omakase Ruby styling for Rails
 inherit_gem: { rubocop-rails-omakase: rubocop.yml }
 
+# Exclude lockfiles and other non-Ruby files from linting
+AllCops:
+  Exclude:
+    - 'Gemfile.lock'
+    - 'node_modules/**/*'
+    - 'vendor/**/*'
+    - 'db/schema.rb'
+
 # Overwrite or add rules to create your own house style
 #
 # # Use `[a, [b, c]]` not `[ a, [ b, c ] ]`
